overflowX hidden for prevent animation glitch

--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -107,6 +107,7 @@ input {
 }
 body {
   background-color: $bgc;
+  overflow-x: hidden;
 }
 *::selection {
   background-color: $c1;
